--- a/Moviles_Oscar/misapps/primeraapp/app/src/main/res/layout/activity_main.xml
+++ b/Moviles_Oscar/misapps/primeraapp/app/src/main/res/layout/activity_main.xml
@@ -218,7 +218,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <EditText
-        android:id="@+id/editTextDId"
+        android:id="@+id/editTextId"
         android:layout_width="115dp"
         android:layout_height="40dp"
         android:layout_marginTop="14dp"
@@ -283,7 +283,7 @@
         app:layout_constraintBottom_toTopOf="@+id/buttonAnterior"
         app:layout_constraintEnd_toStartOf="@+id/buttonAdd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextDId" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextId" />
 
     <Button
         android:id="@+id/buttonAnterior"
